# BAHAMAS

./: MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: github-actions.yml
app/: README.md  app.py  requirements.txt
app/app_pages/: Analysis.py  Software_Quality_Survey.py  __init__.py  bahamas_calculation.py  bahamas_calculation_approx.py  cccg_generation.py  cccg_survey.py  regression.py  utils.py  welcome.py
bahamas/: __init__.py  cccg.py  defect_conditional_probability.py  human_error_mode_distribution.py  main.py  plot_utils.py  sdlc_stage_hep_calculation.py  sdlc_stage_hep_calculation_approx.py  software_total_failure_probability_bbn.py  stage_odc_distribution.py  subfactor.py  uca_defect_correlation.py  utils.py  validate.py  workflow.py
data/: Defect_Data.xlsx  Task_List.xlsx  sdlc_macro.xlsx
docs/: bbn.rst  ccf.rst  conf.py  example.rst  hep.rst  index.rst  input.rst  install.rst  introduction.rst  odc.rst  refs.bib  removal.rst  support.rst  uca.rst
examples/: bbn.toml  ccf.toml
tests/: test_code.py
