[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BAHAMAS"
version = "1.0.0"
authors = [
  { name="Congjian Wang", email="congjian.wang@inl.gov" },
]
description = "Bayesian and Human Reliability Analysis-Aided Method for the Reliability Analysis of Software (BAHAMAS)"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7"
dependencies = [
  "scipy",
  "numpy >= 1.24",
  "pandas",
  "openpyxl",
  "pytest",
  "jsonpointer",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[project.urls]
"Homepage" = "https://github.com/idaholab/BAHAMAS"

[project.scripts]
bahamas = "bahamas.main:main"
