[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BAHAMAS"
version = "1.0.0"
authors = [
  { name="Congjian Wang", email="congjian.wang@inl.gov" },
]
description = "Bayesian and Human Reliability Analysis-Aided Method for the Reliability Analysis of Software (BAHAMAS)"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.9"
dependencies = [
  "scipy",
  "numpy >= 1.24",
  "pandas",
  "openpyxl",
  "pytest",
  "jsonpointer",
  "toml",
  "streamlit",
  "plotly",
  "kaleido",
  "matplotlib",
  "streamlit_extras",
  "streamlit-aggrid",
  "streamlit-option-menu"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: LGPL2.1 License",
    "Operating System :: OS Independent",
    "Topic :: Digital I&C Engineering, Software Failure Probability Evaluation"
]

[project.urls]
"Homepage" = "https://github.com/idaholab/BAHAMAS"

[project.scripts]
bahamas = "bahamas.main:main"
