[metadata]
name = bahamas
version = 1.0.0
description = Bayesian and Human Reliability Analysis-Aided Method for the Reliability Analysis of Software (BAHAMAS)
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE NOTICE.txt
url = https://github.com/idaholab/BAHAMAS

[options]
packages = bahamas

include_package_data = True

python_requires = >=3.9


[options.entry_points]
console_scripts =
   repo_exec = bahamas.main:main
